Avoid a bug where the pender viewport overflows

--- a/src/app/styles/components/media/_pender-card.scss
+++ b/src/app/styles/components/media/_pender-card.scss
@@ -3,6 +3,7 @@
   position: relative;
   max-height: 2000px;
   overflow-y: hidden;
+  overflow-x: hidden;
 
   iframe {
     position: relative;
@@ -21,7 +22,7 @@
   position: absolute;
   top: 50%;
   #{$from-direction}: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 50%);
   display: flex;
   align-items: center;
   justify-content: center;
